<resources>
    <string name="albert_einstein_image">Albert Einstein Image</string>
    <string name="boost_your_knowledge">BOOST YOUR KNOWLEDGE</string>
    <string name="category_image">Category Image</string>
    <string name="category">CATEGORY</string>
    <string name="advanced_image">Advanced Image</string>
    <string name="advanced">ADVANCED</string>
    <string name="category_icon">category icon</string>
    <string name="results">RESULTS</string>
    <string name="score">Score:</string>
    <string name="grade">Grade:</string>
    <string name="topic">Topic:</string>
    <string name="finalres">Final:</string>
    <string name="finish">Finish</string>
    <string name="check">Check</string>
    <string name="FAIL">FAILED</string>
    <string name="PASS">PASSED</string>
    <string name="correct_or_false_image">Correct or false Image</string>
    <string name="categoryLabel">Category</string>
    <string name="any_category_of_quiz">Any category of Quiz</string>
    <string name="difficulty">Difficulty</string>
    <string name="any_difficulty_of_quiz">Any difficulty of Quiz</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="select_number_of_question_in_the_quiz">Select number of question in the Quiz</string>
    <string name="any_tags_of_quiz">Any Tags of Quiz</string>
    <string name="tags">Tags</string>
    <string name="quiz_time">QUIZ! TIME</string>
    <string name="next">NEXT</string>
    <string name="quiz_rules">Quiz-Rules</string>
    <string name="about">About</string>

</resources>