<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedActivity">

    <TextView
        android:id="@+id/id_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/categoryLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/id_spinner_category"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/any_category_of_quiz"
        android:dropDownWidth="wrap_content"
        android:focusable="auto"
        android:labelFor="@id/id_category"
        android:minHeight="48dp"
        android:scrollbars="horizontal"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_category" />

    <TextView
        android:id="@+id/id_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/difficulty"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_spinner_category" />

    <Spinner
        android:id="@+id/id_spinner_difficulty"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/any_difficulty_of_quiz"
        android:dropDownWidth="wrap_content"
        android:focusable="auto"
        android:labelFor="@id/id_difficulty"
        android:minHeight="48dp"

        android:scrollbars="horizontal"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_difficulty" />

    <TextView
        android:id="@+id/id_num_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_of_questions"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_spinner_difficulty" />

    <Spinner
        android:id="@+id/id_spinner_num_questions"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/select_number_of_question_in_the_quiz"
        android:dropDownWidth="wrap_content"
        android:focusable="auto"
        android:labelFor="@id/id_num_questions"
        android:minHeight="48dp"
        android:scrollbars="horizontal"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_num_questions" />

    <TextView
        android:id="@+id/id_tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tags"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_spinner_num_questions" />

    <Spinner
        android:id="@+id/id_spinner_tags"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/any_tags_of_quiz"
        android:dropDownWidth="wrap_content"
        android:focusable="auto"
        android:labelFor="@id/id_tags"
        android:minHeight="48dp"
        android:scrollbars="horizontal"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tags" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@android:drawable/ic_media_play"
        android:onClick="onClickQuizTime"
        android:elevation="20dp"
        android:text="@string/quiz_time"
        android:shadowRadius="@android:integer/config_shortAnimTime"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_spinner_tags" />

</androidx.constraintlayout.widget.ConstraintLayout>